Created ignite server.